[package]
name = "image-cache"
version = "0.1.0"
authors = ["Seokmin Hong <ghdtjrald240@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = { git = "https://github.com/ByteAlex/workers-rs", branch = "cass/cache-api" }
serde_json = "1.0.67"
aws-sdk-s3 = "0.9.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
