[package]
name = "image-cache"
version = "0.1.0"
authors = ["Seokmin Hong <ghdtjrald240@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
worker = { git = "https://github.com/cloudflare/workers-rs", branch = "cass/cache-api" }
serde = { version = "1.0.136", featuers = ["derive"] }
serde_json = "1.0.67"
image = { version = "0.24.1", default-features = false, features = [
    "gif",
    "jpeg",
    "png",
] }
mime_guess = "2.0.4"
sha-1 = "0.10.0"
base64 = "0.13.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
